--- a/app/src/partials/query.options.html
+++ b/app/src/partials/query.options.html
@@ -78,10 +78,10 @@
           Example usage: $rateColumns(Type, count() c) FROM requests
         </li>
         <li>
-          <b>$event(название_события, [агрегирующее_выражение])</b> - Запрос
+          <b>$events(название_события, [агрегирующее_выражение])</b> - Запрос
           истории агрегированых событий, по умолчанию `count()`. Имя среза
           задается парой `_`.<br/>
-          Пример:\n `$event(league_points, sum(__weight))`.
+          Пример:\n `$events(league_points, sum(__weight))`.
         </li>
       </ul>
     </div>
