--- a/app/src/partials/query.options.html
+++ b/app/src/partials/query.options.html
@@ -83,6 +83,16 @@
           задается парой `_`.<br/>
           Пример:\n `$events(league_points, sum(__weight))`.
         </li>
+        <li>
+          <b>$segments(название_события, колонка_разбиения, [агрегирующее_выражение])</b> -
+          Запрос истории агрегированых событий разбитых по срезу.<br/>
+          Пример:\n `$segments(league_points, __val, sum(__weight))`.
+        </li>
+        <li>
+          <b>$filter(...[колонка] IN $переменная)</b> -
+          Упрощенная нотация пересечения условий.<br/>
+          Пример:\n `$filter(__plt IN $platform, __val IN $ids)`.
+        </li>
       </ul>
     </div>
 
